# mug

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: build-macos-arm64.yml  release-macos-arm64.yml
src/: eu.baerlin.mug.plist  main.rs
