[package]
name = "mug"
version = "0.1.0"
edition = "2021"

[dependencies]
cocoa = "0.24"
objc = "0.2"
once_cell = "1.19"

[profile.release]
# Enable link-time optimization (whole-program optimization)
lto = true
# Strip debug symbols to reduce size
strip = "debuginfo"
# Optimize for size instead of speed
opt-level = "z"
# Reduce codegen units to improve optimization
codegen-units = 1
# Panic strategy: abort instead of unwinding (smaller binary)
panic = "abort"
# Ensures cleaner builds without leftover artifacts
incremental = false
